--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
   <h1>Welcome to the Math Quiz </h1>
   <form id="login">
     <label for="usrname">Username</label>
-    <input type="text" id="usrname" name="usrname" required><br>
+    <input type="text" id="usrname" name="usrname" required>
 
     <label for="psw">Password</label>
   <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one 
