--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
   <h1>Welcome to the Math Quiz </h1>
   <form id="login">
     <label for="usrname">Username</label>
-    <input type="text" id="usrname" name="usrname" required>
+    <input type="text" id="usrname" name="usrname" required><br><br>
 
     <label for="psw">Password</label>
   <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one 
@@ -34,7 +34,7 @@
                   <p id="score"> Number of questions : 0</p>
                 <!-- <p id="Answers"> Answers : 0</p>
                 <p id="wrongs"> wrongs: 0</p> -->
-                <h1 id="question">What is X muliply of X?</h1>
+                <h1 id="question">What is X muliply of X?</h2>
                
                 <input type="number" id="input" placeholder="Enter your Answer" required><br>
                 <button id="button" type="submit">Submit</button><br>
